# gst-example

./: CMakeLists.txt  gst_scan_barcode.c  gstexample.c  scan_image.c  videotestsrc_example.c
